[package]
name = "builder_m4cro"
version = "0.2.0"
edition = "2021"
description = "Simple derive macro to implement the builder pattern"
license = "MIT OR Apache-2.0"
repository = "https://github.com/OkieOth/rs_builder_m4cro"


[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
syn = "2.0.39"

